--- a/angular10/src/index.html
+++ b/angular10/src/index.html
@@ -8,7 +8,7 @@
   <title>Akash kumar project</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="https://avatars.githubusercontent.com/u/78015587?s=96&v=4">
 </head>
 <body style="background-color: rgb(211, 211, 211);">
   <app-root></app-root>
